; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_tns.c_quantize_coefs.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_tns.c_quantize_coefs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tns_tmp2_map = common dso_local global float** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (double*, i32*, float*, i32, i32)* @quantize_coefs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @quantize_coefs(double* %0, i32* %1, float* %2, i32 %3, i32 %4) #0 {
  %6 = alloca double*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca float*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca float*, align 8
  store double* %0, double** %6, align 8
  store i32* %1, i32** %7, align 8
  store float* %2, float** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load float**, float*** @tns_tmp2_map, align 8
  %14 = load i32, i32* %10, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds float*, float** %13, i64 %15
  %17 = load float*, float** %16, align 8
  store float* %17, float** %12, align 8
  store i32 0, i32* %11, align 4
  br label %18

18:                                               ; preds = %51, %5
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %54

22:                                               ; preds = %18
  %23 = load double*, double** %6, align 8
  %24 = load i32, i32* %11, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds double, double* %23, i64 %25
  %27 = load double, double* %26, align 8
  %28 = load float*, float** %12, align 8
  %29 = load i32, i32* %10, align 4
  %30 = icmp ne i32 %29, 0
  %31 = zext i1 %30 to i64
  %32 = select i1 %30, i32 16, i32 8
  %33 = call i32 @quant_array_idx(double %27, float* %28, i32 %32)
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* %11, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  store i32 %33, i32* %37, align 4
  %38 = load float*, float** %12, align 8
  %39 = load i32*, i32** %7, align 8
  %40 = load i32, i32* %11, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds float, float* %38, i64 %44
  %46 = load float, float* %45, align 4
  %47 = load float*, float** %8, align 8
  %48 = load i32, i32* %11, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds float, float* %47, i64 %49
  store float %46, float* %50, align 4
  br label %51

51:                                               ; preds = %22
  %52 = load i32, i32* %11, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %11, align 4
  br label %18

54:                                               ; preds = %18
  ret void
}

declare dso_local i32 @quant_array_idx(double, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
